work9/httpsvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpservice
spec:
  selector:
    app: httpserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
